matching is too slow

--- a/bipartite_matching.ipynb
+++ b/bipartite_matching.ipynb
@@ -73,10 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import networkx as nx\n",
     "\n",
     "def similarity(x,y):\n",
     "    return editDistance(x,y,len(x),len(y))\n",
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,20 +202,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{('AU_300 M_1', 'AUS_20 T_2'),\n",
-       " ('CAL_22 T_2', 'CA_300 M_1'),\n",
+       " ('CA_300 M_1', 'CAL_22 T_2'),\n",
        " ('UK_3 T_2', 'CN_300 M_1'),\n",
-       " ('USA_32 T_2', 'USA_35 T_1'),\n",
-       " ('US_300 M_1', 'USA_35 T_2')}"
+       " ('USA_35 T_1', 'USA_32 T_2'),\n",
+       " ('USA_35 T_2', 'US_300 M_1')}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +275,7 @@
        "EdgeDataView([(\"US_('300 M', 1)_1\", \"US_('300 M', 1)_2\", {'weight': -1.0}), (\"US_('300 M', 1)_1\", \"CN_('12 B', 2)_2\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_1\", \"CA_('50 M', 3)_2\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_1\", \"AU_('25 M', 4)_2\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_2\", \"CN_('12 B', 2)_1\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_2\", \"CA_('50 M', 3)_1\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_2\", \"AU_('25 M', 4)_1\", {'weight': -0.3333333333333333}), (\"CN_('12 B', 2)_2\", \"CN_('12 B', 2)_1\", {'weight': -1.0}), (\"CN_('12 B', 2)_2\", \"CA_('50 M', 3)_1\", {'weight': -0.5}), (\"CN_('12 B', 2)_2\", \"AU_('25 M', 4)_1\", {'weight': -0.3333333333333333}), (\"CA_('50 M', 3)_2\", \"CN_('12 B', 2)_1\", {'weight': -0.5}), (\"CA_('50 M', 3)_2\", \"CA_('50 M', 3)_1\", {'weight': -1.0}), (\"CA_('50 M', 3)_2\", \"AU_('25 M', 4)_1\", {'weight': -0.3333333333333333}), (\"AU_('25 M', 4)_2\", \"CN_('12 B', 2)_1\", {'weight': -0.3333333333333333}), (\"AU_('25 M', 4)_2\", \"CA_('50 M', 3)_1\", {'weight': -0.3333333333333333}), (\"AU_('25 M', 4)_2\", \"AU_('25 M', 4)_1\", {'weight': -1.0})])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,14 +396,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"CA_('50 M', 3)_1\": \"US_('300 M', 1)_2\", \"US_('300 M', 1)_1\": \"CN_('12 B', 2)_2\", \"AU_('25 M', 4)_1\": \"CA_('50 M', 3)_2\", \"CN_('12 B', 2)_1\": \"AU_('25 M', 4)_2\", \"AU_('25 M', 4)_2\": \"CN_('12 B', 2)_1\", \"CN_('12 B', 2)_2\": \"US_('300 M', 1)_1\", \"US_('300 M', 1)_2\": \"CA_('50 M', 3)_1\", \"CA_('50 M', 3)_2\": \"AU_('25 M', 4)_1\"}\n"
+      "{\"CN_('12 B', 2)_1\": \"US_('300 M', 1)_2\", \"CA_('50 M', 3)_1\": \"CN_('12 B', 2)_2\", \"US_('300 M', 1)_1\": \"CA_('50 M', 3)_2\", \"AU_('25 M', 4)_1\": \"AU_('25 M', 4)_2\", \"AU_('25 M', 4)_2\": \"AU_('25 M', 4)_1\", \"CN_('12 B', 2)_2\": \"CA_('50 M', 3)_1\", \"US_('300 M', 1)_2\": \"CN_('12 B', 2)_1\", \"CA_('50 M', 3)_2\": \"US_('300 M', 1)_1\"}\n"
      ]
     }
    ],
@@ -420,7 +421,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
