--- a/matching_data.ipynb
+++ b/matching_data.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,21 +74,27 @@
     "    return 1 + min(editDistance(str1, str2, m, n-1),    # Insert \n",
     "                   editDistance(str1, str2, m-1, n),    # Remove \n",
     "                   editDistance(str1, str2, m-1, n-1)    # Replace \n",
-    "                   ) "
+    "                   ) \n",
+    "\n",
+    "\n",
+    "def jaccard_similarity(list1, list2):\n",
+    "    intersection = len(list(set(list1).intersection(list2)))\n",
+    "    union = (len(list1) + len(list2)) - intersection\n",
+    "    return float(intersection) / union"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "EdgeDataView([(\"US_('300 M', 1)_1\", \"US_('300 M', 1)_2\", {'weight': -1.0}), (\"US_('300 M', 1)_1\", \"CN_('12 B', 2)_2\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_1\", \"CA_('50 M', 3)_2\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_1\", \"AU_('25 M', 4)_2\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_2\", \"CN_('12 B', 2)_1\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_2\", \"CA_('50 M', 3)_1\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_2\", \"AU_('25 M', 4)_1\", {'weight': -0.3333333333333333}), (\"CN_('12 B', 2)_2\", \"CN_('12 B', 2)_1\", {'weight': -1.0}), (\"CN_('12 B', 2)_2\", \"CA_('50 M', 3)_1\", {'weight': -0.5}), (\"CN_('12 B', 2)_2\", \"AU_('25 M', 4)_1\", {'weight': -0.3333333333333333}), (\"CA_('50 M', 3)_2\", \"CN_('12 B', 2)_1\", {'weight': -0.5}), (\"CA_('50 M', 3)_2\", \"CA_('50 M', 3)_1\", {'weight': -1.0}), (\"CA_('50 M', 3)_2\", \"AU_('25 M', 4)_1\", {'weight': -0.3333333333333333}), (\"AU_('25 M', 4)_2\", \"CN_('12 B', 2)_1\", {'weight': -0.3333333333333333}), (\"AU_('25 M', 4)_2\", \"CA_('50 M', 3)_1\", {'weight': -0.3333333333333333}), (\"AU_('25 M', 4)_2\", \"AU_('25 M', 4)_1\", {'weight': -1.0})])"
+       "EdgeDataView([(\"US_('300 M', 1)_1\", \"US_('300 M', 1)_2\", {'weight': -0.5}), (\"US_('300 M', 1)_1\", \"CN_('12 B', 2)_2\", {'weight': -1.0}), (\"US_('300 M', 1)_1\", \"CA_('50 M', 3)_2\", {'weight': -1.0}), (\"US_('300 M', 1)_1\", \"AU_('25 M', 4)_2\", {'weight': -0.75}), (\"US_('300 M', 1)_2\", \"CN_('12 B', 2)_1\", {'weight': -1.0}), (\"US_('300 M', 1)_2\", \"CA_('50 M', 3)_1\", {'weight': -1.0}), (\"US_('300 M', 1)_2\", \"AU_('25 M', 4)_1\", {'weight': -0.75}), (\"CN_('12 B', 2)_2\", \"CN_('12 B', 2)_1\", {'weight': -0.5}), (\"CN_('12 B', 2)_2\", \"CA_('50 M', 3)_1\", {'weight': -0.75}), (\"CN_('12 B', 2)_2\", \"AU_('25 M', 4)_1\", {'weight': -1.0}), (\"CA_('50 M', 3)_2\", \"CN_('12 B', 2)_1\", {'weight': -0.75}), (\"CA_('50 M', 3)_2\", \"CA_('50 M', 3)_1\", {'weight': -0.5}), (\"CA_('50 M', 3)_2\", \"AU_('25 M', 4)_1\", {'weight': -0.75}), (\"AU_('25 M', 4)_2\", \"CN_('12 B', 2)_1\", {'weight': -1.0}), (\"AU_('25 M', 4)_2\", \"CA_('50 M', 3)_1\", {'weight': -0.75}), (\"AU_('25 M', 4)_2\", \"AU_('25 M', 4)_1\", {'weight': -0.5})])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,8 +111,9 @@
     "Input: 2 variables that will be measured for similarity\n",
     "Output: The desired similarity metric result\n",
     "\"\"\"\n",
-    "def similarity(x,y):\n",
+    "def similarity_edit(x,y):\n",
     "    return editDistance(x,y,len(x),len(y))\n",
+    "\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -131,7 +138,7 @@
     "Output: weight for each matching to be used in the weight part of constructing the graph\n",
     "\"\"\"\n",
     "def calc_max_weight(key1, key2):\n",
-    "    weight = 1/(1+similarity(key1,key2))\n",
+    "    weight = jaccard_similarity(key1,key2)\n",
     "    return weight\n",
     "\n",
     "\"\"\"\n",
@@ -142,7 +149,7 @@
     "Output: weight for each matching to be used in the weight part of constructing the graph\n",
     "\"\"\"\n",
     "def calc_min_weight(key1, key2):\n",
-    "    weight = (-1)/(1+similarity(key1,key2))\n",
+    "    weight = (-1)/(1+jaccard_similarity(key1,key2))\n",
     "    return weight\n",
     "\n",
     "\"\"\"\n",
@@ -175,10 +182,15 @@
     "    table_a = make_dict(table_a_unprocessed)\n",
     "    table_b = make_dict(table_b_unprocessed)\n",
     "    \n",
+    "    i=0\n",
+    "    \n",
     "    for key1, val1 in table_a.items():\n",
     "       # print(val1)\n",
     "        id1 = str(key1) + '_' + str(val1) + '_1'\n",
     "        for key2, val2 in table_b.items():\n",
+    "            i+=1\n",
+    "            if i%100000 == 0:\n",
+    "                print(str(round(100*i/len(table_a)/len(table_b),2))+'% complete')\n",
     "            #add value to identifier to disitnguish two entries with different values\n",
     "            id2 = str(key2) + '_' + str(val2) + '_2' \n",
     "            bipartite_graph.add_edge(id1, id2, weight=calc_max_weight(val1, val2))\n",
@@ -202,10 +214,15 @@
     "    table_a = make_dict(table_a_unprocessed)\n",
     "    table_b = make_dict(table_b_unprocessed)\n",
     "    \n",
+    "    i=0\n",
+    "    \n",
     "    for key1, val1 in table_a.items():\n",
     "        id1 = str(key1) + '_' + str(val1) + '_1'\n",
     "        for key2, val2 in table_b.items():\n",
-    "            #add value to identifier to disitnguish two entries with different values\n",
+    "            i+=1\n",
+    "            if i%100000 == 0:\n",
+    "                print(str(round(100*i/len(table_a)/len(table_b),2))+'% complete')\n",
+    "            #add value to identifier to distinguish two entries with different values\n",
     "            id2 = str(key2) + '_' + str(val2) + '_2' \n",
     "            bipartite_graph.add_edge(id1, id2, weight=calc_min_weight(key1, key2)) \n",
     "            #edit distance and weight should be inv. prop.\n",
@@ -221,14 +238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"CA_('50 M', 3)_1\": \"US_('300 M', 1)_2\", \"CN_('12 B', 2)_1\": \"CN_('12 B', 2)_2\", \"AU_('25 M', 4)_1\": \"CA_('50 M', 3)_2\", \"US_('300 M', 1)_1\": \"AU_('25 M', 4)_2\", \"CA_('50 M', 3)_2\": \"AU_('25 M', 4)_1\", \"AU_('25 M', 4)_2\": \"US_('300 M', 1)_1\", \"CN_('12 B', 2)_2\": \"CN_('12 B', 2)_1\", \"US_('300 M', 1)_2\": \"CA_('50 M', 3)_1\"}\n"
+      "{\"US_('300 M', 1)_1\": \"US_('300 M', 1)_2\", \"CN_('12 B', 2)_1\": \"CN_('12 B', 2)_2\", \"AU_('25 M', 4)_1\": \"CA_('50 M', 3)_2\", \"CA_('50 M', 3)_1\": \"AU_('25 M', 4)_2\", \"CA_('50 M', 3)_2\": \"AU_('25 M', 4)_1\", \"US_('300 M', 1)_2\": \"US_('300 M', 1)_1\", \"CN_('12 B', 2)_2\": \"CN_('12 B', 2)_1\", \"AU_('25 M', 4)_2\": \"CA_('50 M', 3)_1\"}\n"
      ]
     }
    ],
@@ -246,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,12 +276,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.67% complete\n",
+      "3.33% complete\n",
+      "5.0% complete\n",
+      "6.67% complete\n",
+      "8.33% complete\n",
+      "10.0% complete\n",
+      "11.66% complete\n",
+      "13.33% complete\n",
+      "15.0% complete\n",
+      "16.66% complete\n",
+      "18.33% complete\n",
+      "20.0% complete\n",
+      "21.66% complete\n",
+      "23.33% complete\n",
+      "25.0% complete\n",
+      "26.66% complete\n",
+      "28.33% complete\n",
+      "29.99% complete\n",
+      "31.66% complete\n",
+      "33.33% complete\n",
+      "34.99% complete\n",
+      "36.66% complete\n",
+      "38.33% complete\n",
+      "39.99% complete\n",
+      "41.66% complete\n",
+      "43.33% complete\n",
+      "44.99% complete\n",
+      "46.66% complete\n",
+      "48.32% complete\n",
+      "49.99% complete\n",
+      "51.66% complete\n",
+      "53.32% complete\n",
+      "54.99% complete\n",
+      "56.66% complete\n",
+      "58.32% complete\n",
+      "59.99% complete\n",
+      "61.66% complete\n",
+      "63.32% complete\n",
+      "64.99% complete\n",
+      "66.65% complete\n",
+      "68.32% complete\n",
+      "69.99% complete\n",
+      "71.65% complete\n",
+      "73.32% complete\n",
+      "74.99% complete\n",
+      "76.65% complete\n",
+      "78.32% complete\n",
+      "79.99% complete\n",
+      "81.65% complete\n",
+      "83.32% complete\n",
+      "84.98% complete\n",
+      "86.65% complete\n",
+      "88.32% complete\n",
+      "89.98% complete\n",
+      "91.65% complete\n",
+      "93.32% complete\n",
+      "94.98% complete\n",
+      "96.65% complete\n",
+      "98.32% complete\n",
+      "99.98% complete\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6001104"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "graph_maximal = updated_maximal_construct_graph(table_a, table_b)\n",
-    "#graph_maximal.edges.data()"
+    "graph_maximal.number_of_edges()"
    ]
   },
   {
@@ -273,15 +367,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(nx.algorithms.matching.max_weight_matching(graph_maximal))"
+    "#print(nx.algorithms.matching.max_weight_matching(graph_maximal))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The problem is that the max_weight_matching operation is O(n^3). The above operation does not halt given the large size of the dataset. This might tell us that it is time that we look beyond the networkx package, because their maximal matching algorithms do not do any better than O(n^3). I've found the following alternatives:\n",
+    "\n",
+    "* https://pypi.org/project/pyLAPJV/#description\n",
+    "\n",
+    "* https://pypi.org/project/hungarian/"
+   ]
   },
   {
    "cell_type": "code",
