--- a/matching_data.ipynb
+++ b/matching_data.ipynb
@@ -374,11 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The problem is that the max_weight_matching operation is O(n^3). The above operation does not halt given the large size of the dataset. This might tell us that it is time that we look beyond the networkx package, because their maximal matching algorithms do not do any better than O(n^3). I've found the following alternatives:\n",
-    "\n",
-    "* https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.linear_sum_assignment.html (this seems to be the best solution)\n",
-    "\n",
-    "* https://pypi.org/project/hungarian/"
+    "The problem is that the max_weight_matching operation is O(n^3). The above operation does not halt given the large size of the dataset."
    ]
   },
   {
