--- a/matching_data.ipynb
+++ b/matching_data.ipynb
@@ -56,6 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import datetime\n",
     "import textdistance\n",
     "import editdistance\n",
     "\n",
@@ -281,7 +282,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"CA_('50 M', 3)_1\": \"US_('300 M', 1)_2\", \"CN_('12 B', 2)_1\": \"CN_('12 B', 2)_2\", \"US_('300 M', 1)_1\": \"CA_('50 M', 3)_2\", \"AU_('25 M', 4)_1\": \"AU_('25 M', 4)_2\", \"CN_('12 B', 2)_2\": \"CN_('12 B', 2)_1\", \"US_('300 M', 1)_2\": \"CA_('50 M', 3)_1\", \"CA_('50 M', 3)_2\": \"US_('300 M', 1)_1\", \"AU_('25 M', 4)_2\": \"AU_('25 M', 4)_1\"}\n"
+      "{\"CN_('12 B', 2)_1\": \"US_('300 M', 1)_2\", \"US_('300 M', 1)_1\": \"CN_('12 B', 2)_2\", \"CA_('50 M', 3)_1\": \"CA_('50 M', 3)_2\", \"AU_('25 M', 4)_1\": \"AU_('25 M', 4)_2\", \"CA_('50 M', 3)_2\": \"CA_('50 M', 3)_1\", \"US_('300 M', 1)_2\": \"CN_('12 B', 2)_1\", \"CN_('12 B', 2)_2\": \"US_('300 M', 1)_1\", \"AU_('25 M', 4)_2\": \"AU_('25 M', 4)_1\"}\n"
      ]
     }
    ],
@@ -385,23 +386,19 @@
       "94.98% complete\n",
       "96.65% complete\n",
       "98.32% complete\n",
-      "99.98% complete\n"
+      "99.98% complete\n",
+      "---- Timing for Graph Construction ----\n",
+      "38.380833 seconds\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "6001104"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "now = datetime.datetime.now()\n",
     "graph_maximal = updated_maximal_construct_graph(table_a, table_b)\n",
-    "graph_maximal.number_of_edges()"
+    "graph_maximal.number_of_edges()\n",
+    "timing_bg = (datetime.datetime.now()-now).total_seconds()\n",
+    "print(\"---- Timing for Graph Construction ----\")\n",
+    "print(timing_bg,\"seconds\")"
    ]
   },
   {
@@ -444,11 +441,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "now = datetime.datetime.now()\n",
     "\"\"\"\n",
     "\n",
     "Constructs a maximal bipartite graph of the given two tables according to the treshold similarity.\n",
@@ -489,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -556,14 +552,31 @@
       "96.65% complete\n",
       "98.32% complete\n",
       "99.98% complete\n",
-      "---- Timing for Graph Construction + Matching ----\n",
-      "13.987191 seconds\n"
+      "---- Timing for Graph Construction with Treshold Constraint ----\n",
+      "10.888972 seconds\n",
+      "---- Timing for Matching (Done on the graph constructed with the treshold constraint) ----\n",
+      "2.620411 seconds\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1442"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "now = datetime.datetime.now()\n",
     "treshold_graph_maximal = treshold_updated_maximal_construct_graph(table_a, table_b)\n",
+    "timing_tresh = (datetime.datetime.now()-now).total_seconds()\n",
+    "print(\"---- Timing for Graph Construction with Treshold Constraint ----\")\n",
+    "print(timing_tresh,\"seconds\")\n",
     "#treshold_graph_maximal.number_of_edges()\n",
+    "\n",
     "\"\"\"\n",
     "\n",
     "Outputs the matching that has the maximal weight for each edge in the bipartite graph\n",
@@ -571,10 +584,49 @@
     "Input: A Bipartite Graph\n",
     "Output: A set of matchings. Ex: {('journals/vldb/MedjahedBBNE03__2', '775457__1')}\n",
     "\"\"\"\n",
+    "now = datetime.datetime.now()\n",
     "matching_set = nx.algorithms.matching.max_weight_matching(treshold_graph_maximal)\n",
-    "timing = (datetime.datetime.now()-now).total_seconds()\n",
-    "print(\"---- Timing for Graph Construction + Matching ----\")\n",
-    "print(timing,\"seconds\")"
+    "timing_match = (datetime.datetime.now()-now).total_seconds()\n",
+    "print(\"---- Timing for Matching (Done on the graph constructed with the treshold constraint) ----\")\n",
+    "print(timing_match,\"seconds\")\n",
+    "treshold_graph_maximal.number_of_edges()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As observed above, the graph construction with a treshold constraint was able to speed up the process by **27.58851 seconds**. I believe that this improvement in scalability will prove even better using even larger datasets.\n",
+    "\n",
+    "Most importantly, the matching algorithm halted now that we have less edges to do computations on. The matching algorithm averaged around a total of **2.65 seconds** (timing computation process: took an average result of a few runs of the above block) to do computations on **1442 edges**. The matching algorithm worked surprisingly faster now that it did computations on the edges that would actually matter and we skipped the edges that had a very low possibility of being similar. \n",
+    "\n",
+    "A question that I had in mind is whether the treshold that I have set (0.3) is able to approximately capture the number of matchings that are given in the perfect mapping. In order to investigate this, we can take a look at the perfect matching dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2224\n"
+     ]
+    }
+   ],
+   "source": [
+    "perfect_mapping = convert_df(\"DBLP-ACM_perfectMapping.csv\")\n",
+    "row, col = perfect_mapping.shape\n",
+    "print(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Interestingly, there definitely are less edges in the graph that I've constructed using the treshold. The perfect mapping file shows that there are **2224 rows** of matched data, whereas my algorithm is going to work on matching **1442 edges**, which only captures 65% of the matching already. It might be a good idea to lower the treshold, or go over the `treshold_updated_maximal_construct_graph` again to see if there are any mistakes in creating the graph according to a certain treshold."
    ]
   },
   {
@@ -1646,7 +1698,6 @@
     }
    ],
    "source": [
-    "import datetime\n",
     "import csv\n",
     "\n",
     "def eval_matching(matching):\n",
