experiment evaluation update

--- a/experiments/Experiments on Matching.ipynb
+++ b/experiments/Experiments on Matching.ipynb
@@ -249,14 +249,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Performing compare all match (edit distance)...\n"
+      "Performing compare all match (edit distance)...\n",
+      "Naive Edit Distance Matching computation time taken:  50.445497  seconds\n",
+      "Compare All Matcher (Edit Distance) Performance: {'false positive': 0.72, 'false negative': 0.7, 'accuracy': 0.29}\n",
+      "Performing compare all match (jaccard distance)...\n",
+      "Naive Jaccard Matching computation time taken:  31.163409  seconds\n",
+      "Compare All Matcher (Jaccard Distance) Performance: {'false positive': 0.45, 'false negative': 0.42, 'accuracy': 0.57}\n"
      ]
     }
    ],
@@ -287,9 +292,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performing random sample match (edit distance)...\n",
+      "Simulation-Based Edit Distance Matching computation time taken:  32.327063  seconds\n",
+      "Random Sample Matcher (Edit Distance) Performance: {'false positive': 0.89, 'false negative': 0.89, 'accuracy': 0.11}\n",
+      "Performing random sample match (jaccard distance)...\n",
+      "Simulation-Based Jaccard Matching computation time taken:  23.926086  seconds\n",
+      "Random Sample Matcher (Jaccard Distance) Performance: {'false positive': 0.8, 'false negative': 0.79, 'accuracy': 0.21}\n"
+     ]
+    }
+   ],
    "source": [
     "print('Performing random sample match (edit distance)...')\n",
     "now = datetime.datetime.now()\n",
