updated experiments with synthetic dataset

--- a/experiments/Experimentation Dataset.ipynb
+++ b/experiments/Experimentation Dataset.ipynb
@@ -48,6 +48,9 @@
     "\n",
     "table_b = create_synthetic_dataset.add_typo(table_a, table_b_non_typo)\n",
     "\n",
+    "print(table_a)\n",
+    "print(table_b)\n",
+    "\n",
     "now = datetime.datetime.now()\n",
     "bipartite_graph_result = one_to_n.keycomp_treshold_updated_maximal_construct_graph(table_a, table_b, \"name\", 0.5)\n",
     "timing_tresh = (datetime.datetime.now()-now).total_seconds()\n",
